tests/ui/rfc-1445-restrict-constants-in-patterns/match-nonempty-array-forbidden-without-eq.stderr
error: to use a constant of type `B` in a pattern, `B` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match-nonempty-array-forbidden-without-eq.rs:16:9
   |
LL |         FOO => { }
   |         ^^^

error: aborting due to previous error

